src/test/test-models/bad/reserved/STAN_MATH_PATCH.stan
data {
  real STAN_MATH_PATCH;
}
model {
}
